deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konikuliner-web
  labels:
    app: konikuliner-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: konikuliner-web
  template:
    metadata:
      annotations:
        oncallPager: 800-555-1212
      labels:
        app: konikuliner-web
    spec:
      containers:
      - image: nginx
        name: nginx
