deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  type: LoadBalancer

spec:
  backend:
    serviceName: konikuliner-web
    servicePort: 5000
